[gd_scene load_steps=56 format=2]

[ext_resource path="res://player/sprites/attack_arms_spriteSheet.png" type="Texture" id=1]
[ext_resource path="res://player/sprites/attack_body_spriteSheet.png" type="Texture" id=2]
[ext_resource path="res://player/sprites/idle_body_spriteSheet.png" type="Texture" id=3]
[ext_resource path="res://player/sprites/idle_arms_spriteSheet.png" type="Texture" id=4]
[ext_resource path="res://player/sprites/walk_body_spriteSheet.png" type="Texture" id=5]
[ext_resource path="res://player/sprites/walk_arms_spriteSheet.png" type="Texture" id=6]
[ext_resource path="res://player/Player.gd" type="Script" id=10]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=16]
[ext_resource path="res://player/sprites/jump_body_spriteSheet.png" type="Texture" id=21]
[ext_resource path="res://player/sprites/jump_arms_spriteSheet.png" type="Texture" id=22]

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 320, 320, 320 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 320, 320, 320 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 320, 320, 320 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 320, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 640, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 0, 320, 320, 320 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 320, 320, 320 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 320, 320, 320 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": false,
"name": "attack",
"speed": 13.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "jump",
"speed": 30.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "walk",
"speed": 16.0
} ]

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 320, 320 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 320, 320, 320 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 320, 320, 320 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 320, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 640, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 320, 320, 320 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 640, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 320, 320, 320 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 320, 320, 320, 320 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": false,
"name": "attack",
"speed": 13.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "jump",
"speed": 30.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "walk",
"speed": 16.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0
height = 64.0

[sub_resource type="RectangleShape2D" id=66]
extents = Vector2( 16, 60 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 60, 56 )

[sub_resource type="Animation" id=69]
resource_name = "damageUpgrade"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite_arms:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.454902, 0.137255, 0.6, 1 ), Color( 1, 1, 1, 0 ), Color( 0.454902, 0.137255, 0.6, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=68]
resource_name = "heal"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite_body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.160784, 1, 0.270588, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite_arms:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.160784, 1, 0.270588, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=70]
resource_name = "healthUpgrade"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite_body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.454902, 0.137255, 0.6, 0 ), Color( 0.454902, 0.137255, 0.6, 1 ), Color( 0, 0, 0, 0 ), Color( 0.454902, 0.137255, 0.6, 1 ), Color( 0.454902, 0.137255, 0.6, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=67]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite_body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.113725, 0.113725, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite_arms:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.113725, 0.113725, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 10 )

[node name="AnimatedSprite_body" type="AnimatedSprite" parent="."]
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="AnimatedSprite_arms" type="AnimatedSprite" parent="."]
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 33 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
limit_smoothed = true
smoothing_enabled = true

[node name="invulFrame" type="Timer" parent="."]

[node name="powerupEater" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="powerupEater"]
position = Vector2( 0, -4 )
shape = SubResource( 66 )

[node name="velvecRect" type="ColorRect" parent="."]
visible = false
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.470588, 0.117647, 0.631373, 1 )

[node name="hitArea" type="Area2D" parent="."]
position = Vector2( 44, 0 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitArea"]
shape = SubResource( 3 )

[node name="HUD" parent="." instance=ExtResource( 16 )]

[node name="VFX" type="AnimationPlayer" parent="."]
anims/damageUpgrade = SubResource( 69 )
anims/heal = SubResource( 68 )
anims/healthUpgrade = SubResource( 70 )
anims/hurt = SubResource( 67 )

[connection signal="animation_finished" from="AnimatedSprite_arms" to="." method="_on_AnimatedSprite_arms_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite_arms" to="." method="_on_AnimatedSprite_arms_frame_changed"]
[connection signal="timeout" from="invulFrame" to="." method="_on_invulFrame_timeout"]
[connection signal="loaded" from="HUD" to="." method="_on_HUD_loaded"]
[connection signal="animation_started" from="VFX" to="." method="_on_VFX_animation_started"]
